// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate TypeScript user deps module with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import '/Users/ovidiu/cosmos/src/polyfills.js';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig: RendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture.js') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.js') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator.js') }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: true,
  fixtures,
  decorators,
};
"
`;

exports[`should generate TypeScript user deps module with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import './polyfills.js';
import './global.css';

export const rendererConfig: RendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture.js') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture.js') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator.js') }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: true,
  fixtures,
  decorators,
};
"
`;

exports[`should generate user deps module with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator.tsx') }
};

export const moduleWrappers = {
  lazy: true,
  fixtures,
  decorators,
};
"
`;

exports[`should generate user deps module with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import './polyfills.ts';
import './global.css';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture.tsx') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator.tsx') }
};

export const moduleWrappers = {
  lazy: true,
  fixtures,
  decorators,
};
"
`;
